delete accepted task, all jobs page sort api created

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 node_modules
 .env
-freelance-market-token-verify.json
+freelance-market-place-746d7-firebase-adminsdk-fbsvc-d007d14540.json
+encode.js
+.vercel
